update online judge profiles section

--- a/index.html
+++ b/index.html
@@ -228,47 +228,50 @@
                 </div>
                 <div class="oj_profiles_contents">
                     <div class="row">
-                        <div class="col-md-4 oj_profile_single">
+                        <div class="col-lg-4 col-md-6 col-sm-12 oj_profile_single">
                             <div class="oj_profile_card text-center">
-                                <div class="oj_details">
-                                    <div class="oj_logo">
-                                        <img src="assets/images/oj/leetcode.png" alt="leetcode" class="img-fluid">
-                                    </div>
+                                <div class="oj_logo">
+                                    <img src="assets/images/oj/leetcode.png" alt="leetcode">
+                                </div>
+                                <div class="oj_details text-center">
                                     <div class="oj_profile_single_info">
-                                        <p>I have solved 200+ LeetCode Easy, Medium and Hard problems. Take a tour in...</p>
+                                        <p>I practice Easy, Medium, and Hard level problems on LeetCode to strengthen my foundation and deepen my understanding of Data Structures and Algorithms. Explore my journey here...</p>
                                     </div>
-                                    <div class="oj_profile_single_link">
-                                        <a href="https://leetcode.com/u/myasiin/" class="my-dark_button" target="_blank">leetcode.com/u/myasiin</a>
+                                    <div class="oj_profile_single_link text-center">
+                                        <a href="https://github.com/mdyasinahmed/practice.problem_solving/tree/main/practice.leetcode_solved_code"><i class="bi bi-github"></i>leetcode_solved_code</a>
+                                        <a href="#"><i class="bi bi-person-circle"></i>myasiin</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 oj_profile_single">
+                        <div class="col-lg-4 col-md-6 col-sm-12 oj_profile_single">
                             <div class="oj_profile_card text-center">
-                                <div class="oj_details">
-                                    <div class="oj_logo">
-                                        <img src="assets/images/oj/hackerrank.png" alt="leetcode" class="img-fluid">
-                                    </div>
+                                <div class="oj_logo">
+                                    <img src="assets/images/oj/hackerrank.png" alt="hackerrank">
+                                </div>
+                                <div class="oj_details text-center">
                                     <div class="oj_profile_single_info">
-                                        <p>I have solved 200+ LeetCode Easy, Medium and Hard problems. Take a tour in...</p>
+                                        <p>As part of my continuous learning journey, I solve practice problems on HackerRank and have earned notable achievements, including Java-4☆, C++-3☆, and SQL-2☆ badges. Dive into my progress here...</p>
                                     </div>
-                                    <div class="oj_profile_single_link">
-                                        <a href="https://www.hackerrank.com/profile/mdyasiin" class="my-dark_button" target="_blank">hackerrank.com/profile/mdyasiin</a>
+                                    <div class="oj_profile_single_link text-center">
+                                        <a href="https://github.com/mdyasinahmed/practice.problem_solving/tree/main/practice.hackerrank_solved_code"><i class="bi bi-github"></i>hackerrank_solved_code</a>
+                                        <a href="https://www.hackerrank.com/profile/mdyasiin"><i class="bi bi-person-circle"></i>mdyasiin</a>
                                     </div>
                                 </div>
                             </div>
                         </div>
-                        <div class="col-md-4 oj_profile_single">
+                        <div class="col-lg-4 col-md-6 col-sm-12 oj_profile_single">
                             <div class="oj_profile_card text-center">
-                                <div class="oj_details">
-                                    <div class="oj_logo">
-                                        <img src="assets/images/oj/Codeforces.png" alt="leetcode" class="img-fluid">
-                                    </div>
+                                <div class="oj_logo">
+                                    <img src="assets/images/oj/Codeforces.png" alt="Codeforces">
+                                </div>
+                                <div class="oj_details text-center">
                                     <div class="oj_profile_single_info">
-                                        <p>I have solved 200+ LeetCode Easy, Medium and Hard problems. Take a tour in...</p>
+                                        <p>I practice and participate in contests to enhance my coding and problem-solving skills. Through this process, I reflect on my mistakes and take thoughtful steps to improve my abilities.</p>
                                     </div>
-                                    <div class="oj_profile_single_link">
-                                        <a href="https://codeforces.com/profile/mahi_95" class="my-dark_button" target="_blank">codeforces.com/profile/mahi_95</a>
+                                    <div class="oj_profile_single_link text-center">
+                                        <a href="https://github.com/mdyasinahmed/practice.problem_solving/tree/main/practice.codeforces_solved_code"><i class="bi bi-github"></i>codeforces_solved_code</a>
+                                        <a href="https://codeforces.com/profile/mahi_95"><i class="bi bi-person-circle"></i>mahi_95</a>
                                     </div>
                                 </div>
                             </div>
@@ -296,7 +299,7 @@
                                     Are you constantly struggling to find the time to accomplish everything you need to
                                     do? If so, you’re not alone...</p>
                                 <a href="https://medium.com/@md_yasinahmed/what-happens-if-you-dont-set-tasks-for-the-next-day-before-going-to-sleep-6b2bc875aea"
-                                    class="my-light_button">Read on Medium..</a>
+                                    class="my-light_button">Read on Medium >></a>
                             </div>
                         </div>
                     </div>
@@ -310,7 +313,7 @@
                                     order to capture the audience’s interest and make it simple for them to understand
                                     what you are saying...</p>
                                 <a href="https://medium.com/@md_yasinahmed/how-to-prepare-a-well-organized-presentation-dfc332f47dff"
-                                    class="my-light_button">Read on Medium..</a>
+                                    class="my-light_button">Read on Medium >></a>
                             </div>
                         </div>
                     </div>
