add website ui update

--- a/index.html
+++ b/index.html
@@ -231,22 +231,6 @@
                         <div class="col-lg-4 col-md-6 col-sm-12 oj_profile_single">
                             <div class="oj_profile_card text-center">
                                 <div class="oj_logo">
-                                    <img src="assets/images/oj/leetcode.png" alt="leetcode">
-                                </div>
-                                <div class="oj_details text-center">
-                                    <div class="oj_profile_single_info">
-                                        <p>I practice Easy, Medium, and Hard level problems on LeetCode to strengthen my foundation and deepen my understanding of Data Structures and Algorithms. Explore my journey here...</p>
-                                    </div>
-                                    <div class="oj_profile_single_link text-center">
-                                        <a href="https://github.com/mdyasinahmed/practice.problem_solving/tree/main/practice.leetcode_solved_code"><i class="bi bi-github"></i>leetcode_solved_code</a>
-                                        <a href="#"><i class="bi bi-person-circle"></i>myasiin</a>
-                                    </div>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-lg-4 col-md-6 col-sm-12 oj_profile_single">
-                            <div class="oj_profile_card text-center">
-                                <div class="oj_logo">
                                     <img src="assets/images/oj/hackerrank.png" alt="hackerrank">
                                 </div>
                                 <div class="oj_details text-center">
@@ -255,7 +239,23 @@
                                     </div>
                                     <div class="oj_profile_single_link text-center">
                                         <a href="https://github.com/mdyasinahmed/practice.problem_solving/tree/main/practice.hackerrank_solved_code"><i class="bi bi-github"></i>hackerrank_solved_code</a>
-                                        <a href="https://www.hackerrank.com/profile/mdyasiin"><i class="bi bi-person-circle"></i>mdyasiin</a>
+                                        <a href="https://www.hackerrank.com/profile/mdyasiin"><i class="my-ico oj-hr"></i>mdyasiin</a>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
+                        <div class="col-lg-4 col-md-6 col-sm-12 oj_profile_single">
+                            <div class="oj_profile_card text-center">
+                                <div class="oj_logo">
+                                    <img src="assets/images/oj/leetcode.png" alt="leetcode">
+                                </div>
+                                <div class="oj_details text-center">
+                                    <div class="oj_profile_single_info">
+                                        <p>I practice Easy, Medium, and Hard level problems on LeetCode to strengthen my foundation and deepen my understanding of Data Structures and Algorithms. Explore my journey here...</p>
+                                    </div>
+                                    <div class="oj_profile_single_link text-center">
+                                        <a href="https://github.com/mdyasinahmed/practice.problem_solving/tree/main/practice.leetcode_solved_code"><i class="bi bi-github"></i>leetcode_solved_code</a>
+                                        <a href="#"><i class="my-ico oj-lc"></i>myasiin</a>
                                     </div>
                                 </div>
                             </div>
@@ -271,7 +271,7 @@
                                     </div>
                                     <div class="oj_profile_single_link text-center">
                                         <a href="https://github.com/mdyasinahmed/practice.problem_solving/tree/main/practice.codeforces_solved_code"><i class="bi bi-github"></i>codeforces_solved_code</a>
-                                        <a href="https://codeforces.com/profile/mahi_95"><i class="bi bi-person-circle"></i>mahi_95</a>
+                                        <a href="https://codeforces.com/profile/mahi_95"><i class="my-ico oj-cf"></i>mahi_95</a>
                                     </div>
                                 </div>
                             </div>
@@ -336,15 +336,11 @@
                         <a href="https://medium.com/@md_yasinahmed"><i class="bi bi-medium"></i></a>
                         <a href="https://github.com/mdyasinahmed"><i class="bi bi-github"></i></a>
                     </div>
-                    <div class="footer-contact text-center">
-                        <div class="footer-contact-single">
+                    <div class="footer_contact text-center">
+                        <div class="footer_contact_single">
                             <a href="https://wa.me/+880 1874 729
-                            892"><i class="bi bi-whatsapp"></i>+880 1874 729
-                                892</a>
-                        </div>
-                        <div class="footer-contact-single">
-                            <a href="mailto:mdyasinmahii@gmail.com"><i
-                                    class="bi bi-inbox"></i>mdyasinmahii@gmail.com</a>
+                            892">+880 1874 729 892</a>
+                            <a href="mailto:mdyasinmahii@gmail.com">mdyasinmahii@gmail.com</a>
                         </div>
                     </div>
                 </div>
