add updates of website (checked css redundancy)

--- a/index.html
+++ b/index.html
@@ -267,7 +267,7 @@
                                 </div>
                                 <div class="oj_details text-center">
                                     <div class="oj_profile_single_info">
-                                        <p>I practice and participate in contests to enhance my coding and problem-solving skills. Through this process, I reflect on my mistakes and take thoughtful steps to improve my abilities.</p>
+                                        <p>I practice and try to participate in contests to enhance my coding and problem-solving skills. Through this process, I reflect on my mistakes and take thoughtful steps to improve my abilities.</p>
                                     </div>
                                     <div class="oj_profile_single_link text-center">
                                         <a href="https://github.com/mdyasinahmed/practice.problem_solving/tree/main/practice.codeforces_solved_code"><i class="bi bi-github"></i>codeforces_solved_code</a>
