add website ui updates

--- a/index.html
+++ b/index.html
@@ -107,7 +107,7 @@
 
                 <div class="hero-info">
                     <h1>Md. Yasin Ahmed Mahi</h1>
-                    <h4>Flutter Developer</h4>
+                    <h4>Front-End Developer</h4>
                     <p class="hero-paragraph">An independent app and web developer from Bangladesh, building product and
                         online experiences for companies large and small.</p>
                     <div class="hero-buttons">
@@ -166,7 +166,7 @@
                                 alt="Flutter Mobile Applications">
                             <div class="card-body">
                                 <h5 class="card-title">Flutter Mobile Applications</h5>
-                                <p class="card-text">Discover my expertly crafted Flutter apps, featuring modern designs
+                                <p class="card-text">Discover my crafted Flutter apps, featuring modern designs
                                     and seamless performance that enhance user experiences.</p>
                                 <div>
                                     <a href="https://mdyasinahmed.github.io/web.my_projects">View in Details</a>
@@ -194,8 +194,7 @@
                                 alt="Undergraduate Projects">
                             <div class="card-body">
                                 <h5 class="card-title">Undergraduate Projects</h5>
-                                <p class="card-text">Delve into my undergraduate portfolio, showcasing creative
-                                    solutions that blend academic knowledge with practical technology.</p>
+                                <p class="card-text">Explore my undergraduate portfolio, featuring creative solutions that combine academic knowledge with practical skills.</p>
                                 <div>
                                     <a href="https://mdyasinahmed.github.io/web.my_projects">View in Details</a>
                                 </div>
