add profiles updates

--- a/index.html
+++ b/index.html
@@ -162,12 +162,12 @@
                 <div class="row projectSingle-body">
                     <div class="col-lg-4 col-md-6 singleProject-body">
                         <div class="card singleProject">
-                            <img src="assets/images/my_projects/yasin's_flutter_apps.png" class="card-img-top"
-                                alt="Flutter Mobile Applications">
+                            <img src="assets/images/my_projects/web & desktop.png" class="card-img-top"
+                                alt="Web & Desktop Applications">
                             <div class="card-body">
-                                <h5 class="card-title">Flutter Mobile Applications</h5>
-                                <p class="card-text">Discover my crafted Flutter apps, featuring modern designs
-                                    and seamless performance that enhance user experiences.</p>
+                                <h5 class="card-title">Websites & Desktop Apps</h5>
+                                <p class="card-text">Explore cross-platform desktop applications and responsive websites
+                                    designed for efficiency and rich functionality.</p>
                                 <div>
                                     <a href="https://mdyasinahmed.github.io/web.my_projects">View in Details</a>
                                 </div>
@@ -176,12 +176,12 @@
                     </div>
                     <div class="col-lg-4 col-md-6 singleProject-body">
                         <div class="card singleProject">
-                            <img src="assets/images/my_projects/web & desktop.png" class="card-img-top"
-                                alt="Web & Desktop Applications">
+                            <img src="assets/images/my_projects/yasin's_flutter_apps.png" class="card-img-top"
+                                alt="Flutter Mobile Applications">
                             <div class="card-body">
-                                <h5 class="card-title">Websites & Desktop Apps</h5>
-                                <p class="card-text">Explore cross-platform desktop applications and responsive websites
-                                    designed for efficiency and rich functionality.</p>
+                                <h5 class="card-title">Flutter Mobile Applications</h5>
+                                <p class="card-text">Discover my crafted Flutter apps, featuring modern designs
+                                    and seamless performance that enhance user experiences.</p>
                                 <div>
                                     <a href="https://mdyasinahmed.github.io/web.my_projects">View in Details</a>
                                 </div>
@@ -254,7 +254,7 @@
                                     </div>
                                     <div class="oj_profile_single_link text-center">
                                         <a href="https://github.com/mdyasinahmed/practice.problem_solving/tree/main/practice.leetcode_solved_code"><i class="bi bi-github"></i>leetcode_solved_code</a>
-                                        <a href="#"><i class="my-ico oj-lc"></i>myasiin</a>
+                                        <a href="https://leetcode.com/u/mdyasinahmedmahi/"><i class="my-ico oj-lc"></i>mdyasin...</a>
                                     </div>
                                 </div>
                             </div>
